deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlfscache
  labels:
    app.kubernetes.io/name: gitlfscache
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitlfscache
  ports:
    - name: http
      port: 80
      targetPort: http
